# vdpq

./: LICENSE  README.md  ideas.txt  plan.json  vdpq.cabal
examples/: plan.json
executable/: Main.hs
src/: Main.hs  VDPQ.hs
src/VDPQ/: IO.hs  Plan.hs  Types.hs
