name:          vdpq
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
data-files:    
author:        Daniel Díaz Carrete
maintainer:    diaz_carrete@yahoo.com
category:      System
build-type:    Simple
cabal-version: >= 1.10
-- Synopsis:      
-- Description:   

Extra-Source-Files:
    README.md
    CHANGELOG
    LICENSE

Executable vdpq
    hs-source-dirs: src
    main-is: Main.hs
    default-language: Haskell2010
    ghc-options: -Wall -threaded -O2
    build-depends:         
        base >= 4.7 && < 5,
        transformers >= 0.2 && < 0.5,
        transformers-compat == 0.3.*,
        free >= 4.2 && < 5,
        bifunctors >= 4.1 && < 5,
        process >= 1.2.0 && < 1.3,
        pipes >= 4.1.3 && < 4.2,
        pipes-bytestring >= 2.1.0 && < 2.2,
        pipes-text >= 0.0.0.10 && < 0.0.2,
        text >= 0.11.2 && < 1.2.1,
        pipes-concurrency >= 2.0.2 && < 3,
        pipes-parse >=3.0.1 && <3.1,
        exceptions >= 0.6.0 && < 0.7,
        void >= 0.6 && < 0.7,
        containers >= 0.4,
        semigroups >= 0.15 && < 0.16,
        conceit >= 0.2.1.0 && < 0.3.0.0,
        contravariant >= 1.2,
        foldl >= 1.0.7,
        optparse-applicative <= 0.12,
        async <= 2.0.2,
        base-prelude >= 0.1.14,
        mtl-prelude >= 2.0.1,
        aeson >= 0.8.0.2,
        aeson-pretty >= 0.7.2,
        pipes-aeson >= 0.4.1.2,
        lens >= 4.7,
        filepath >= 1.3.0.2,
        directory >= 1.2.1.0,
        bytestring >= 0.10.4.0

Source-repository head
    type:     git
    location: https://github.com/danidiaz/vdpq.git


