name:          vdpq
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
data-files:    
author:        Daniel Díaz Carrete
maintainer:    diaz_carrete@yahoo.com
category:      System
build-type:    Simple
cabal-version: >= 1.10
-- Synopsis:      
-- Description:   

Extra-Source-Files:
    README.md
    CHANGELOG
    LICENSE

library
    default-language: Haskell2010
    ghc-options: -Wall -threaded -O2
    build-depends:
        base >= 4.7 && < 5,
        transformers >= 0.2 && < 0.5,
        bifunctors >= 4.1 && < 5,
        text >= 0.11.2 && < 1.2.1,
        containers >= 0.4,
        async <= 2.0.2,
        aeson >= 0.8.0.2,
        aeson-pretty >= 0.7.2,
        lens >= 4.7,
        bytestring >= 0.10.4.0,
        wreq >= 0.3.0.1,
        -- https://www.fpcomplete.com/school/using-fphc/recommended-libraries
        enclosed-exceptions >= 1.0.1,
        system-filepath >= 0.4.13,
        system-fileio >= 0.3.16
    exposed-modules:
        VDPQ
        VDPQ.Types
        VDPQ.IO
    exposed: True
    buildable: True
    hs-source-dirs: src
    other-modules:
    ghc-options: -Wall

Executable vdpq
    hs-source-dirs: src
    main-is: Main.hs
    default-language: Haskell2010
    ghc-options: -Wall -threaded -O2
    build-depends:         
        base >= 4.7 && < 5,
        transformers >= 0.2 && < 0.5,
        bifunctors >= 4.1 && < 5,
        text >= 0.11.2 && < 1.2.1,
        containers >= 0.4,
        optparse-applicative <= 0.12,
        async <= 2.0.2,
        aeson >= 0.8.0.2,
        aeson-pretty >= 0.7.2,
        lens >= 4.7,
        wreq >= 0.3.0.1,
        bytestring >= 0.10.4.0,
        network, 
        enclosed-exceptions >= 1.0.1,
        system-filepath >= 0.4.13,
        system-fileio >= 0.3.16

Source-repository head
    type:     git
    location: https://github.com/danidiaz/vdpq.git


