name:          vdpq
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
data-files:    
author:        Daniel Díaz Carrete
maintainer:    diaz_carrete@yahoo.com
category:      System
build-type:    Simple
cabal-version: >= 1.10
-- Synopsis:      
-- Description:   

Extra-Source-Files:
    README.md
    CHANGELOG
    LICENSE

library
    -- http://stackoverflow.com/questions/12305970/how-to-make-a-haskell-cabal-project-with-libraryexecutables-that-still-run-with
    hs-source-dirs: library
    default-language: Haskell2010
    ghc-options: -Wall -threaded -O2
    build-depends:
        base >= 4.7 && < 5,
        transformers >= 0.2 && < 0.5,
        bifunctors >= 4.1 && < 5,
        text >= 0.11.2 && < 1.2.1,
        containers >= 0.4,
        async <= 2.0.2,
        aeson >= 0.8.0.2,
        aeson-pretty >= 0.7.2,
        lens >= 4.7,
        bytestring >= 0.10.4.0,
        wreq >= 0.3.0.1,
        -- https://www.fpcomplete.com/school/using-fphc/recommended-libraries
        exceptions >= 0.8,
        enclosed-exceptions >= 1.0.1,
        system-filepath >= 0.4.13,
        system-fileio >= 0.3.16
    exposed-modules:
        VDPQ
        VDPQ.Types
        VDPQ.IO
    exposed: True
    buildable: True
    other-modules:
    ghc-options: -Wall

Executable vdpq
    hs-source-dirs: executable
    main-is: Main.hs
    default-language: Haskell2010
    ghc-options: -Wall -threaded -O2
    build-depends:         
        base >= 4.7 && < 5,
        containers >= 0.4,
        optparse-applicative <= 0.12,
        async <= 2.0.2,
        lens >= 4.7,
        network, 
        vdpq 

Source-repository head
    type:     git
    location: https://github.com/danidiaz/vdpq.git


